Changelog

$Id: Changes,v 1.30 2004-02-07 09:55:10 oops Exp $

* Sat, Feb  7 2004
	by JoungKyun Kim <http://www.oops.org>
	- changed exit code to return source variable on idn code

* Wed, Feb  4 2004
	by JoungKyun Kim <http://www.oops.org>
	- updated libidn library 0.3.7
	- release 0.0.8

* Tue, Feb  3 2003
	by JoungKyun Kim <http://www.oops.org>
	- added bin2hex function
	- fixed convert_racecode ugly parsing bug

* Mon, Nov 10 2003
	by JoungKyun Kim <http://www.oops.org>
	- update trim_r and trim function
	- release 0.0.7

* Mon, Nov 10 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed ugly return value of trim and trim_r
	- release 0.0.6

* Fri, Nov  7 2003
	by JoungKyun Kim <http://www.oops.org>
	- added split function
	- rewrite argv_make function
	- release 0.0.5

* Thu, Nov  6 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed print gabage string problem on fileread function

* Thu, Oct 30 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed segmentation fault that free array variable with argv_make

* Tue, Oct 28 2003
	by JoungKyun Kim <http://www.oops.org>
	- added argument function
          argv_make
          ofree_array
          get_whitespace
          o_getopt
	- fixed typo in olibc-config.h.in

* Sat, Sep 27 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed miss memory allocation
	- added safely free function

* Fri, Sep 26 2003
	by JoungKyun Kim <http://www.oops.org>
	- changed to real size intead of sizeof on memset
	- release 0.0.4

* Thu, Sep 25 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed tmp variable reset size

* Sat, Sep 20 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed return wrong value on str2long, str2double function

* Sat, Sep 20 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed gabage problem on lib_preg_parse function
	- added olibc_version function
	- release 0.0.3

* Fri, Sep 19 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed blank return fileread function